# memex

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  DIVERGENCES.md  PROMPT.md  README.md  activity.md  docker-compose-mongo.yml  docker-compose.yml  prd.md  pyproject.toml  ralph.sh
.runtime/: session_id
.serena/: project.yml
docker/: .env.example  init-mongo.sh  mongod.conf  mongot.conf
docs/: becoming-api.md  canonical-path-report.md  ingest-latency.md  mongot-index-provisioning.md  mongot-primer.md
examples/: demo_data.py  learning_usage.py  mongo_usage.py  sample_usage.py  tune_hybrid.py
tests/: benchmark_ingest_latency.py  conftest.py  test_attach_card_artifact.py  test_becoming_helpers.py  test_belief_revision.py  test_benchmarks.py  test_bm25_search.py  test_calibration_pipeline.py  test_client.py  test_consolidation_feed.py  test_conventions.py  test_dream_executor.py  test_dream_safety.py  test_dream_state_events.py  test_dream_triggers.py  test_e2e_lifecycle.py  test_edge_metadata.py  test_edges.py  test_enrichment.py  test_ensure_search_indexes.py  test_grid_sweep_tuner.py  test_hybrid_search.py  test_ingest.py  test_ingest_enrichment_wiring.py  test_judgment_models.py  test_kref.py  test_kref_resolution.py  test_labelers.py  test_learning_client.py  test_learning_pipeline_integration_mongo.py  test_lookup.py  test_mcp_graph_tools.py  test_mcp_mutation_tools.py  test_mcp_tools.py  test_models.py  test_mongo_hybrid_space_scope.py  test_mongo_working_memory.py  test_mrr_evaluator.py  test_multi_query.py  test_neo4j_schema.py  (+17 more)
(+61 files in other folders)
